# majik-file-rust

./: Cargo.toml  README.md
src/: lib.rs  majik_file.rs  tauri_commands.rs  tests.rs
src/core/: constants.rs  error.rs  mod.rs  types.rs  utils.rs
src/core/compressor/: majik_compressor.rs  mod.rs
src/core/crypto/: crypto_provider.rs  mod.rs
